Bug 446864 - Creating a new tag without any input will result in a crash
Summary: Creating a new tag without any input will result in a crash
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Compiled Sources Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-12 04:35 UTC by huarkiou
Modified: 2021-12-15 13:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Report (112.83 KB, text/plain)
2021-12-12 04:35 UTC, huarkiou
Details

Note You need to log in before you can comment on or make changes to this bug.
Description huarkiou 2021-12-12 04:35:39 UTC
Created attachment 144470 [details]
Report

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Click the "Choose brush preset" button in the tool bar
2. Click "Tag"
3. Click "+" to create a new tag without any input

OBSERVED RESULT
Krita crashed.

EXPECTED RESULT
a warning that I didn't input anything

SOFTWARE/OS VERSIONS
Windows: Windows11 21H2 (22000.348)

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-12-15 13:25:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1235
Comment 2 Dmitry Kazakov 2021-12-15 13:47:33 UTC
Git commit e71af0612dab7aada4e6148e366cdea456830b07 by Dmitry Kazakov.
Committed on 15/12/2021 at 13:47.
Pushed by dkazakov into branch 'master'.

Fix a crash when trying to create an empty tag

M  +2    -0    libs/resourcewidgets/KisTagChooserWidget.cpp

https://invent.kde.org/graphics/krita/commit/e71af0612dab7aada4e6148e366cdea456830b07
Comment 3 Dmitry Kazakov 2021-12-15 13:47:56 UTC
Git commit ca69ce82ce0ed9faefdb3888eb79e74b21dacd1b by Dmitry Kazakov.
Committed on 15/12/2021 at 13:47.
Pushed by dkazakov into branch 'krita/5.0'.

Fix a crash when trying to create an empty tag
(cherry picked from commit e71af0612dab7aada4e6148e366cdea456830b07)

M  +2    -0    libs/resourcewidgets/KisTagChooserWidget.cpp

https://invent.kde.org/graphics/krita/commit/ca69ce82ce0ed9faefdb3888eb79e74b21dacd1b