Fix a crash when trying to create an empty tag

BUG:446864